Add explicit swim session attach and kill modes